# pypostal-multiarch

./: README.md  pyproject.toml  setup.py  test_readme_examples.py
.github/workflows/: build.yml  test-examples.yml
postal/: __init__.pyi  normalize.pyi  parser.pyi  tokenize.pyi
