[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pypostal-multiarch"
version = "1.2.0"
description = "Python bindings to libpostal for fast international address parsing/normalization with multi-architecture support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "kaiz11", email = "kaiz11@users.noreply.github.com"}
]
maintainers = [
    {name = "kaiz11", email = "kaiz11@users.noreply.github.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.8"
dependencies = [
    "six"
]

[project.urls]
"Homepage" = "https://github.com/kaiz11/pypostal-multiarch"
"Repository" = "https://github.com/kaiz11/pypostal-multiarch"
"Bug Tracker" = "https://github.com/kaiz11/pypostal-multiarch/issues"
"Original Project" = "https://github.com/openvenues/pypostal"

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "pp* *-musllinux_* *-win32"
test-command = "python -c 'import postal.expand; print(postal.expand.expand_address(\"123 Main St\"))'"
test-requires = ["nose"]

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y curl autoconf automake libtool pkgconfig || apt-get update && apt-get install -y curl autoconf automake libtool pkg-config",
    "git clone https://github.com/openvenues/libpostal /tmp/libpostal",
    "cd /tmp/libpostal && ./bootstrap.sh && ./configure --datadir=/tmp/libpostal-data && make && make install",
    "ldconfig"
]

[tool.cibuildwheel.macos]
before-all = [
    "brew install curl autoconf automake libtool pkg-config || echo 'brew packages may already be installed'",
    "git clone https://github.com/openvenues/libpostal /tmp/libpostal",
    "cd /tmp/libpostal && ./bootstrap.sh && ./configure --datadir=/tmp/libpostal-data --disable-sse2 && make && make install"
]

[tool.cibuildwheel.windows]
before-all = [
    "git clone https://github.com/openvenues/libpostal C:\\libpostal",
    "cd C:\\libpostal && cp -rf windows/* ./ && ./bootstrap.sh && ./configure --datadir=C:\\libpostal-data && make && make install"
]